Replicating the maven setup

--- a/samples/multi-modules/core/build.gradle
+++ b/samples/multi-modules/core/build.gradle
@@ -1,3 +1,7 @@
 dependencies {
-	implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.6.4'
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.6.4'
+    implementation 'org.springframework.experimental:spring-native:0.11.4-SNAPSHOT'
+    implementation 'org.springframework.experimental:spring-native-configuration:0.11.4-SNAPSHOT'
 }
